tests/paczka1/small_fuzzy/13743386.err
Error in line 2: S487 S487 61,6
Error in line 9: S487 A306 43,5
Error in line 12: K40Dmu A568 5,7
